--- a/home.html
+++ b/home.html
@@ -11,45 +11,45 @@
     <title>Dessarollo</title>
 </head>
 <body>
-<div class="wrapper">
-    <header>
-        <span class="tilda">&#126;</span>
-        <h1><span class="letter">Dessa</span>rollo</h1>
-        <h2>The <span class="letter">idea</span> generator</h2>
-    </header>
-    <nav>
-        <ul id="mainNav">
-            <li class="active"><a href="#">Home</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-            <li><a href="#">About</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-            <li><a href="#">Typography</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-            <li><a href="#">Ideas</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-            <li><a href="#">Contact</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-        </ul>
-    </nav>
-    <a href="#" class="button">Learn More</a>
-    <section class="bord">
-        <div id="pic">
-        <img src="img/lamp.png" alt="lamp" class="lamp"/>
-        <img src="img/blur.png" alt="blur" class="blur"/>
-        </div>
-        <div id="text">
-            <h5>We Create Bright Ideas</h5>
-            <p>It is a long established fact that a reader will be
-            distracted by the readable content of a page when
-            looking at its layout. The point of using Lorem
-            Ipsum is that it has a more-or-less normal distribution
-            of letters, as opposed to using 'Content here, content here',
-            making it look like readable English. Many
-            desktop publishing packages and web page editors now
-            use Lorem Ipsum as their default model text,
-            and a search for 'lorem ipsum' will uncover many. </p>
-        </div>
-    </section>
-    <footer>
-    <img src="img/footer_shadow_left.png" alt="footer_shadow_left" class="shl"/>
-    <img src="img/footer_shadow_right.png" alt="footer_shadow_right" class="shr"/>
-    Footer &copy; 2008 All Rights Reserved
-    </footer>
-</div>
+    <div class="wrapper">
+        <header>
+                <span class="tilda">&#126;</span>
+                <h1><span class="letter">Dessa</span>rollo</h1>
+                <h2>The <span class="letter">idea</span> generator</h2>
+        </header>
+        <nav>
+            <ul id="mainNav">
+                <li class="active"><a href="#">Home</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="#">About</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="#">Typography</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="#">Ideas</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="#">Contact</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+            </ul>
+        </nav>
+        <a href="#" class="button">Learn More</a>
+        <section class="bord">
+            <div id="pic">
+            <img src="img/lamp.png" alt="lamp" class="lamp"/>
+            <img src="img/blur.png" alt="blur" class="blur"/>
+            </div>
+            <div id="text">
+                <h4>We Create Bright Ideas</h4>
+                <p>It is a long established fact that a reader will be
+                distracted by the readable content of a page when
+                looking at its layout. The point of using Lorem
+                Ipsum is that it has a more-or-less normal distribution
+                of letters, as opposed to using 'Content here, content here',
+                making it look like readable English. Many
+                desktop publishing packages and web page editors now
+                use Lorem Ipsum as their default model text,
+                and a search for 'lorem ipsum' will uncover many. </p>
+            </div>
+        </section>
+        <footer>
+            <img src="img/footer_shadow_left.png" alt="footer_shadow_left" class="shl"/>
+            <img src="img/footer_shadow_right.png" alt="footer_shadow_right" class="shr"/>
+            <span>Footer &copy; 2008 All Rights Reserved</span>
+        </footer>
+    </div>
 </body>
 </html>
