--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <nav>
             <ul id="mainNav">
                 <li class="active"><a href="#">Home</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-                <li><a href="#">About</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="about.html">About</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
                 <li><a href="#">Typography</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-                <li><a href="#">Ideas</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="ideas.html">Ideas</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
                 <li><a href="#">Contact</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
             </ul>
         </nav>
