--- a/about.html
+++ b/about.html
@@ -19,10 +19,10 @@
         </header>
         <nav>
             <ul id="mainNav">
-                <li><a href="#">Home</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="index.html">Home</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
                 <li class="active"><a href="#">About</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
                 <li><a href="#">Typography</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
-                <li><a href="#">Ideas</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
+                <li><a href="ideas.html">Ideas</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
                 <li><a href="#">Contact</a><img src="img/shadow_underline.png" alt="shadow" class="shadow"/></li>
             </ul>
         </nav>
